# grapql-example

./: .gitignore  README.md  pyproject.toml
graphql/: main.py  setting.py
graphql/dao/: AuthorStorage.py  BookStorage.py  CommentStorage.py
graphql/dao/daoInMemImpl/: AuthorStorage.py  BookStorage.py  CommentStorage.py
graphql/dao/daoInterface/: AuthorInterface.py  BookInterface.py  CommentInterface.py
graphql/entities/: Author.py  Book.py  Comment.py
graphql/queries/: AuthorQuery.py  BookQuery.py  CommentQuery.py  UserQuery.py
